3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Documentation, no functional change.
 common/object.c
 server/rune.c
Nicolas Weeger 2007-07-09

Remove superfluous calls to esrv_del_item (since remove_ob calls it if needed).
Remove now unused send_removed_object function. Change esrv_send_item to esrv_update_item.
 common/item.c
 server/c_object.c c_wiz.c gods.c player.c plugins.c shop.c skills.c spell_effect.c time.c
 types/spell_effect/spell_effect.c
Nicolas Weeger 2007-07-09

Update face information below player if it changes.  Add P_PLAYER mapflag
field, as well as pointer to player on space making it easy to find
players on a space.  Fix for bug 1735459
---
common/map.c: Modify update_position() to look for player and
  update MapSpace accordingly.
common/object.c: update_object():  If player is object, update map
   attributes immediately.  Add handling for face or object changes.
include/map.h: Add SET/GET_MAP_PLAYER, player * to MapSpace, P_PLAYER
  flag
---
MSW 2007-07-08

Documentation, no functional change. Change some #define to enum for grouping purposes.
 include/map.h
Nicolas Weeger 2007-07-08

Try to factor esrv_del_item and esrv_send_item into remove_ob() and
insert_ob_in_ob(). Fix calls to esrv_send_item that are really esrv_update_item().
 common/object.c treasure.c
 include/newclient.h
 random_maps/standalone.c
 server/apply.c attack.c c_object.c c_wiz.c gods.c player.c plugins.c skills.c shop.c spell_effect.c time.c
 socket/item.c
 test/unit/common/stubs_common.c
 types/armour_improver/armour_improver.c
 types/lamp/lamp.c
 types/lighter/lighter.c
Nicolas Weeger 2007-07-05

Remove crossedit-related documentation, replace with Gridarta.
Removed: